--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "pong game",
   "main": "pongo.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "serve ./"
   },
   "repository": {
     "type": "git",
@@ -18,5 +18,8 @@
   "bugs": {
     "url": "https://github.com/nikoguerrero/Pong/issues"
   },
-  "homepage": "https://github.com/nikoguerrero/Pong#readme"
+  "homepage": "https://github.com/nikoguerrero/Pong#readme",
+  "dependencies": {
+    "serve": "^12.0.0"
+  }
 }
